# flowers

./: .dockerignore  .pre-commit-config.yaml  COSTANTS.py  Makefile  README.md  config.json  constants.py  docker-compose.yml  emulator.py  manage.py  preparations.py  pyproject.toml  pytest.ini
bench/: .gitignore
bench/bench/: asgi.py  settings.py  urls.py  wsgi.py
data/db/: postmaster.pid
data/db/global/: 1260  pg_control
data/db/pg_stat_tmp/: global.stat
managment/: conftest.py  factories.py  models.py  serializers.py  test_room.py  test_user.py  urls.py  views.py
managment/migrations/: 0001_initial.py
plants/: Dockerfile  asgi.py  settings.py  urls.py  utils.py  wsgi.py
plantsBase/: admin.py  apps.py  choices.py  models.py
plants_base/: admin.py  apps.py  choices.py  conftest.py  data_for_tests.py  factories.py  models.py  serializers.py  test_delete.py  test_get.py  test_get_pk.py  test_patch.py  test_post.py  test_post_plans.py  tests.py  urls.py  views.py
plants_care/: admin.py  apps.py  choices_care.py  conftest.py  factories.py  models.py  serializers.py  test_fertilizer.py  test_problem.py  test_solution.py  test_watering.py  tests.py  urls.py  views.py
